src/objects/Historical_Customer_Product_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Usage_Ordered__c</fullName>
        <formula>IF(CONTAINS(Product_Usage_String__c,&quot;Automated recommendations (entire environment)&quot;),&quot;(f) Automated recommendations (entire environment)&quot;,
IF(CONTAINS(Product_Usage_String__c,&quot;Automated recommendations (part of environment)&quot;),&quot;(g) Automated recommendations (part of environment)&quot;,
CASE(Product_Usage_String__c,
&quot;Minimal or no use&quot;,&quot;(a) Minimal or no use&quot;,
&quot;Monitoring &amp; reporting&quot;,&quot;(b) Monitoring &amp; reporting&quot;,
&quot;Planning scenarios&quot;,&quot;(c) Planning scenarios&quot;,
&quot;Manual recommendations&quot;,&quot;(d) Manual recommendations&quot;,
&quot;Automated recommendations&quot;,&quot;(e) Automated recommendations&quot;,
&quot;Lost&quot;,&quot;(h) Lost&quot;,
&quot;Unknown&quot;,&quot;(i) Unknown&quot;,
&quot;N/A&quot;)))</formula>
        <label>Product Usage (Ordered)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Usage_String__c</fullName>
        <label>Product Usage String</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Historical Customer Product Usage</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Historical Customer Product Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Customer Product Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>